# trip-planner

./: .env.example  .gitignore  README.md  pyproject.toml  test.md
frontend/: package-lock.json
frontend/src/: App.vue
src/: prompt.py
src/agent/: agent.py
src/api/: config.py  main.py
src/api/routes/: map.py  poi.py  trip.py
src/api/services/: mcp_agent.py  unsplash_service.py
src/models/: schemas.py
